2013-12-09  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css: Fix styles in group view
	for groups without states where letters were not visible
	Incident: 432

2013-12-09  Sergio Martin <sergio.martin@artica.es>

	* extras/pandoradb_migrate_4.1_to_5.0.postgreSQL.sql
	extras/pandoradb_migrate_4.1_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.1_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Add to the 
	migration scripts a query to set default theme when update 
	from 4.x to 5 version. It prevents from ugly layouts due 
	not supported themes. Incident #421

2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed the get events filtered by group.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/events.php: Fixed a bug loading events
	filtergin by group when a group has no events.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/networkmap.php: Fixed a bug width
	mobile network map.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/networkmaps.php: Fixed a wrong link
	on group icon from network map list.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/include/style/main.css: Added CSS style for 
	"no data to show graph".	

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/module_graph.php: Fixed a problem with
	module graph filter regarding to event and period filter.

2013-12-05  Dario Rodriguez <dario@artica.es>

	* mobile/operation/modules.php: Added default value for tag
	filter and added "All" option to modules group and tag filters

        * mobile/operation/modules.php: Fixed a style bug related to
        filter explanation update on module search on mobile console.

2013-12-05 Miguel de Dios <miguel.dedios@artica.es>
	