@@ -1,3 +1,10 @@
+2013-12-10  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_events.php: Fix storing of event 
+	comments in metaconsole and shot the event comments more
+	recent first. 
+	Incident #440
+
 2013-12-09  Sergio Martin <sergio.martin@artica.es>
 
 	* include/styles/pandora.css: Fix styles in group view
